// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigureRsu component should take a multi-RSU snapshot 1`] = `
<div>
  <div>
    <div>
      <div
        class="header-container"
      >
        <h2
          class="snmpheader"
        >
          Multiple RSU Config
        </h2>
        <button
          id="toggle"
        >
          X
        </button>
      </div>
      <h2
        class="snmpheader2"
      >
        RSU IP List: 
        1.1.1.1, 2.2.2.2, 3.3.3.3
      </h2>
    </div>
    <div
      class="accordion"
      id="sideBarBlock"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters accordion-content css-mocked-MuiPaper-root-MuiAccordion-root"
      >
        <div
          aria-controls="panel2bh-content"
          aria-expanded="false"
          class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters expand css-mocked-MuiButtonBase-root-MuiAccordionSummary-root"
          id="panel2bh-header"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-mocked-MuiAccordionSummary-content"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
            >
              Message Forwarding
            </p>
          </div>
          <div
            class="MuiAccordionSummary-expandIconWrapper css-mocked-MuiAccordionSummary-expandIconWrapper"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium expand css-mocked-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-mocked-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-mocked-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-mocked-MuiCollapse-wrapperInner"
            >
              <div
                aria-labelledby="panel2bh-header"
                class="MuiAccordion-region"
                id="panel2bh-content"
                role="region"
              >
                <div
                  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-mocked-MuiPaper-root-MuiAccordion-root"
                >
                  <div
                    class="MuiAccordionDetails-root css-mocked-MuiAccordionDetails-root"
                  >
                    <div
                      id="snmpdiv"
                    >
                      <h2
                        id="snmpheader"
                      >
                        Message Forwarding
                      </h2>
                      <form
                        id="snmpform"
                      >
                        <label
                          id="snmplabel"
                        >
                          <strong>
                            Destination IP:
                          </strong>
                          <input
                            id="snmpinput"
                            type="text"
                            value=""
                          />
                        </label>
                        <label
                          id="snmplabel"
                        >
                          <strong>
                            Message Type:
                          </strong>
                          <select
                            id="snmpdropdown"
                          >
                            <option
                              value="bsm"
                            >
                              BSM
                            </option>
                            <option
                              value="spat"
                            >
                              SPaT
                            </option>
                            <option
                              value="map"
                            >
                              MAP
                            </option>
                            <option
                              value="srm"
                            >
                              SRM
                            </option>
                            <option
                              value="ssm"
                            >
                              SSM
                            </option>
                          </select>
                        </label>
                      </form>
                      <button
                        id="refreshbtn"
                      >
                        Add Forwarding
                      </button>
                      <button
                        id="refreshbtn"
                      >
                        Delete Forwarding
                      </button>
                      <p
                        id="infotext"
                      />
                      <p
                        id="warningtext"
                      />
                      <div>
                        <p
                          id="snmpfiltertext"
                          margintop="40px"
                        >
                          By specifying a destination IP address along with a message type, you can add message forwarding to any of the selected RSUs or delete message forwarding from any RSUs that already have that configuration.
                        </p>
                      </div>
                      <div />
                      <div />
                    </div>
                  </div>
                  <div
                    class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-mocked-MuiCollapse-root"
                    style="min-height: 0px;"
                  >
                    <div
                      class="MuiCollapse-wrapper MuiCollapse-vertical css-mocked-MuiCollapse-wrapper"
                    >
                      <div
                        class="MuiCollapse-wrapperInner MuiCollapse-vertical css-mocked-MuiCollapse-wrapperInner"
                      >
                        <div
                          class="MuiAccordion-region"
                          role="region"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfigureRsu component should take a single RSU snapshot 1`] = `
<div>
  <div>
    <div>
      <h2
        class="snmpheader"
      >
        Selected RSU Config
      </h2>
      <button
        id="toggle"
      >
        X
      </button>
      <h2
        class="snmpheader2"
      >
        Roadway: 
        primary_route
        <br />
        Milepost: 
        111
        <br />
        IPv4: 
        1.1.1.1
      </h2>
    </div>
    <div
      class="accordion"
      id="sideBarBlock"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters accordion-content css-mocked-MuiPaper-root-MuiAccordion-root"
      >
        <div
          aria-controls="panel1bh-content"
          aria-expanded="false"
          class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-mocked-MuiButtonBase-root-MuiAccordionSummary-root"
          id="panel1bh-header"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-mocked-MuiAccordionSummary-content"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
            >
              Current Configuration
            </p>
          </div>
          <div
            class="MuiAccordionSummary-expandIconWrapper css-mocked-MuiAccordionSummary-expandIconWrapper"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium expand css-mocked-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-mocked-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-mocked-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-mocked-MuiCollapse-wrapperInner"
            >
              <div
                aria-labelledby="panel1bh-header"
                class="MuiAccordion-region"
                id="panel1bh-content"
                role="region"
              >
                <div
                  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-mocked-MuiPaper-root-MuiAccordion-root"
                >
                  <div
                    class="MuiAccordionDetails-root css-mocked-MuiAccordionDetails-root"
                  >
                    <div
                      id="snmpdiv"
                    >
                      <div
                        id="msgfwddiv"
                      >
                        <h2
                          id="snmpheader"
                        >
                          Message Forwarding
                        </h2>
                        <button
                          aria-label="Refresh Message Forwarding"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-mocked-MuiButtonBase-root-MuiIconButton-root"
                          data-mui-internal-clone-element="true"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                            data-testid="RefreshIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-mocked-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <div />
                      <div />
                    </div>
                  </div>
                  <div
                    class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-mocked-MuiCollapse-root"
                    style="min-height: 0px;"
                  >
                    <div
                      class="MuiCollapse-wrapper MuiCollapse-vertical css-mocked-MuiCollapse-wrapper"
                    >
                      <div
                        class="MuiCollapse-wrapperInner MuiCollapse-vertical css-mocked-MuiCollapse-wrapperInner"
                      >
                        <div
                          class="MuiAccordion-region"
                          role="region"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters accordion-content css-mocked-MuiPaper-root-MuiAccordion-root"
      >
        <div
          aria-controls="panel2bh-content"
          aria-expanded="false"
          class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters expand css-mocked-MuiButtonBase-root-MuiAccordionSummary-root"
          id="panel2bh-header"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-mocked-MuiAccordionSummary-content"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
            >
              Message Forwarding
            </p>
          </div>
          <div
            class="MuiAccordionSummary-expandIconWrapper css-mocked-MuiAccordionSummary-expandIconWrapper"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium expand css-mocked-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-mocked-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-mocked-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-mocked-MuiCollapse-wrapperInner"
            >
              <div
                aria-labelledby="panel2bh-header"
                class="MuiAccordion-region"
                id="panel2bh-content"
                role="region"
              >
                <div
                  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-mocked-MuiPaper-root-MuiAccordion-root"
                >
                  <div
                    class="MuiAccordionDetails-root css-mocked-MuiAccordionDetails-root"
                  >
                    <div
                      id="snmpdiv"
                    >
                      <h2
                        id="snmpheader"
                      >
                        Message Forwarding
                      </h2>
                      <form
                        id="snmpform"
                      >
                        <label
                          id="snmplabel"
                        >
                          <strong>
                            Destination IP:
                          </strong>
                          <input
                            id="snmpinput"
                            type="text"
                            value=""
                          />
                        </label>
                        <label
                          id="snmplabel"
                        >
                          <strong>
                            Message Type:
                          </strong>
                          <select
                            id="snmpdropdown"
                          >
                            <option
                              value="bsm"
                            >
                              BSM
                            </option>
                            <option
                              value="spat"
                            >
                              SPaT
                            </option>
                            <option
                              value="map"
                            >
                              MAP
                            </option>
                            <option
                              value="srm"
                            >
                              SRM
                            </option>
                            <option
                              value="ssm"
                            >
                              SSM
                            </option>
                          </select>
                        </label>
                      </form>
                      <button
                        id="refreshbtn"
                      >
                        Add Forwarding
                      </button>
                      <p
                        id="infotext"
                      />
                      <div />
                      <div />
                      <div />
                      <div />
                    </div>
                  </div>
                  <div
                    class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-mocked-MuiCollapse-root"
                    style="min-height: 0px;"
                  >
                    <div
                      class="MuiCollapse-wrapper MuiCollapse-vertical css-mocked-MuiCollapse-wrapper"
                    >
                      <div
                        class="MuiCollapse-wrapperInner MuiCollapse-vertical css-mocked-MuiCollapse-wrapperInner"
                      >
                        <div
                          class="MuiAccordion-region"
                          role="region"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters accordion-content css-mocked-MuiPaper-root-MuiAccordion-root"
      >
        <div
          aria-controls="panel3bh-content"
          aria-expanded="false"
          class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters expand css-mocked-MuiButtonBase-root-MuiAccordionSummary-root"
          id="panel3bh-header"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-mocked-MuiAccordionSummary-content"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
            >
              Reboot
            </p>
          </div>
          <div
            class="MuiAccordionSummary-expandIconWrapper css-mocked-MuiAccordionSummary-expandIconWrapper"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium expand css-mocked-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-mocked-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-mocked-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-mocked-MuiCollapse-wrapperInner"
            >
              <div
                aria-labelledby="panel3bh-header"
                class="MuiAccordion-region"
                id="panel3bh-content"
                role="region"
              >
                <div
                  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-mocked-MuiPaper-root-MuiAccordion-root"
                >
                  <div
                    class="MuiAccordionDetails-root css-mocked-MuiAccordionDetails-root"
                  >
                    <div
                      id="snmpdiv"
                    >
                      <h2
                        id="snmpheader"
                      >
                        RSU Reboot
                      </h2>
                      <button
                        id="refreshbtn"
                      >
                        Reboot
                      </button>
                      <p
                        id="infotext"
                      >
                        Warning: This action could result in taking the RSU offline
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-mocked-MuiCollapse-root"
                    style="min-height: 0px;"
                  >
                    <div
                      class="MuiCollapse-wrapper MuiCollapse-vertical css-mocked-MuiCollapse-wrapper"
                    >
                      <div
                        class="MuiCollapse-wrapperInner MuiCollapse-vertical css-mocked-MuiCollapse-wrapperInner"
                      >
                        <div
                          class="MuiAccordion-region"
                          role="region"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
